@@ -1,3 +1,7 @@
+2011-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* initial size of sequent window configurable
+
 2011-08-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* improve save button
